--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </header>
 
 <main>
+    <div><a href="https://meet.google.com/vii-icii-mbw" class="button">JOIN</a></div>
     <img src="51.jpg" alt="Session Poster" class="poster"> <!-- Replace with actual poster URL -->
     
     <div>
