--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             const difference = targetTime - currentTime;
 
             if (difference <= 0) {
-                document.getElementById("countdown").innerText = "Time's up!";
+                document.getElementById("countdown").innerText = "Started Please Join ASAP!";
                 clearInterval(timerInterval);
                 return;
             }
